package SmartHome.domain.actuators;

/**
 * Enumeration representing different functionalities of actuators in a smart home system.
 * Each constant in this enum corresponds to a specific functionality supported by an actuator.
 */
public enum ActuatorFunctionality {
    On_Off,
    Range,
    BlindRoller
}
